service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-kube-example-service
  labels:
    app: go-kube-example
spec:
  ports:
    - port: 8080
  selector:
    app: go-kube-example
